redirect to new version

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Análise de Variância (ANOVA)</title>
     <link rel="icon" href="./logo.png">
+    <meta http-equiv="refresh" content="0; URL='https://www.italodoria.com/anova/index.html'"/>
     
     <!-- Tailwind CSS para um design moderno e responsivo -->
     <script src="https://cdn.tailwindcss.com"></script>
